--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,45 @@
     border: none;
     outline: none;
 }
+
+.data_display_block {
+    padding: 24px;
+}
+
+.dashboard__title {
+    padding: 24px;
+    border-bottom: 1px solid black;
+}
+
+.bottom_block {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.statistic_title {
+    font-size: 26px;
+}
+
+.statistics_block{
+    background-color: white;
+}
+
+.statistic_top_block {
+    display: flex;
+    justify-content: space-evenly;
+    border-bottom: 1px solid inherit;
+}
+
+.statistic_percentage {
+    font-size: 46px;
+    color: rgb(36, 85, 36)
+}
+
+.top_block{
+    padding: 10px;
+}
+
+.top_block__title{
+    font-size: 26px;
+}
