--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@
     background-color: white;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .search_block {
@@ -77,6 +78,34 @@
     border: none;
     outline: none;
 }
+
+.about_me {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.about_me div img {
+    width: 100%;
+    height: 100%;
+}
+
+/* .about_me__info{
+    display:flex;
+    line-height: 0 !important;
+} */
+
+.profile_info_1 {
+    line-height: 16px;
+    font-weight: 700;
+    padding: 2px;
+}
+
+.profile_info_2 {
+    line-height: 16px;
+    padding: 2px;
+}
+
 
 .data_display_block {
     padding: 24px;
@@ -97,8 +126,11 @@
     font-size: 26px;
 }
 
-.statistics_block{
+.statistics_block {
     background-color: white;
+    max-height: 500px;
+    /* width: 100%;
+    text-align: center; */
 }
 
 .statistic_top_block {
@@ -112,10 +144,42 @@
     color: rgb(36, 85, 36)
 }
 
-.top_block{
+.top_block {
     padding: 10px;
 }
 
-.top_block__title{
+.top_block__title {
     font-size: 26px;
+}
+
+.statistic_diagramm {
+    max-width: 400px;
+    max-height: 400px;
+}
+
+.students_table, .teachers_table{
+    padding: 24px;
+}
+
+.students_block, .teachers_block{
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+    border-bottom: 1px solid gray;
+}
+
+.students_title, .teachers_title{
+    font-weight: 600;
+    font-size: 26px;
+}
+
+.add_button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 6px 20px;
+}
+
+.add_button p{
+    font-size: 18px;
 }
