--- a/src/index.css
+++ b/src/index.css
@@ -157,18 +157,21 @@
     max-height: 400px;
 }
 
-.students_table, .teachers_table{
+.students_table,
+.teachers_table {
     padding: 24px;
 }
 
-.students_block, .teachers_block{
+.students_block,
+.teachers_block {
     display: flex;
     justify-content: space-between;
     padding: 24px;
     border-bottom: 1px solid gray;
 }
 
-.students_title, .teachers_title{
+.students_title,
+.teachers_title {
     font-weight: 600;
     font-size: 26px;
 }
@@ -178,8 +181,59 @@
     align-items: center;
     gap: 10px;
     padding: 6px 20px;
+    background-color: white;
+    color: black;
+    outline: none;
+    /* border: none; */
 }
 
-.add_button p{
+.add_button:hover {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    /* padding: 6px 20px; */
+    background-color: white !important;
+    color: black !important;
+}
+
+
+.add_button p {
     font-size: 18px;
+}
+
+.create_buttons {
+    display: flex;
+    gap: 15px;
+}
+
+.form_create {
+    padding: 24px;
+}
+
+.first_row {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.first_row_upper_block,
+.first_row_bottom_block {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.right_inputs {
+    width: 100%;
+}
+
+.second_row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    /* justify-content: space-between; */
+}
+
+.upload_picture {
+    padding: 20px;
 }
