--- a/src/index.css
+++ b/src/index.css
@@ -234,10 +234,9 @@ button {
     gap: 50px;
 }
 
-.upload_picture {
+/* .upload_img {
     padding: 40px !important;
-
-}
+} */
 
 .gender_male {
     color: green;
@@ -259,7 +258,7 @@ button {
     border: none;
 }
 
-.login_error{
+.login_error {
     color: red;
     font-size: 16px;
     font-weight: 600;
